--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .form{
 font size: 20px;
 text-align: center;
@@ -10,6 +11,7 @@ color: yellow;
 }
 
 .two{
+    
 font-family:cursive;
 color: blue;
 }
@@ -23,6 +25,69 @@ color: green;
 .four{
 font-family: monospace;
 color: brown;
+}
+
+.background{
+background-repeat:no-repeat;
+
+    
+    
+    
+}
+
+@font-face 
+{
+    font-family:Chyga;
+    src:url("Chyga.ttf");}
+@font-face 
+{
+    font-family:MiraculousChristmas;
+    src:url("Miraculous_Christmas.ttf");}
+@font-face 
+{
+    font-family:Knight;
+    src:url("Knight_Brush_Demo.otf");}
+
+.font1{
+    font-family: "Chyga";
+    font-size: 50px;
+    position:absolute;
+    margin-top:800px;
+    margin-left:400px;
+}
+
+
+.font2{
+    
+ font-family: "MiraculousChristmas";
+    font-size: 50px;
+    position:absolute;
+    margin-top:400px;
+    margin-left:400px;
+    
+} 
+
+
+.font3{
+    font-family: "Knight";
+    font-size: 50px;
+    position:absolute;
+    margin-top:px;
+    margin-left:400px;
+}
+
+.home{
+    
+    position:absolute;
+    margin-left:400px;
+}
+
+
+
+
+
+.blucksy{
+    z-index: -1;
 }
 
 
